@@ -1,3 +1,6 @@
+8 October 2012: Wouter
+	- update ldns-testpkts.c to ldns 1.6.14 version.
+
 5 October 2012: Wouter
 	- fix build of pythonmod in objdir (thanks Jakob Schlyter).
 
